    * [UIMA-859] - changeVersion scripts not handling transition from SNAPSHOT to non-SNAPSHOT properly
    * [UIMA-863] - update release notes for release 2.2.2-incubating
    * [UIMA-864] - update version from 2.2.2-incubating-SNAPSHOT to 2.2.2-incubating
    * [UIMA-865] - UIMA core distribution build only works if the UIMA AS plugins are available

** Improvement
    * [UIMA-477] - CDE function for import by name uses file system browser; should instead show appropriate items in classpath
    * [UIMA-553] - casManager.releaseCas(aCas) should switch to the base view of the argument; otherwise fails to release
    * [UIMA-657] - Eclipse Update site should keep previous versions
    * [UIMA-687] - Remove redundant notifyAll when calling casPool.releaseCas(...)
    * [UIMA-694] - Make Manifest Build-date work
    * [UIMA-709] - eclipse plugins won't compile if uimaj-ep-runtime project is open
    * [UIMA-721] - Improve performance of ResultSpecification, especially for Capability Language Flows
    * [UIMA-731] - check if output file must be created while running the capabilityLanguageFlow tests
    * [UIMA-734] - Check and possibly update docs for capability language flow to say not to depend on subtyping
    * [UIMA-739] - Use compressed form of eclipse update site, and support multiple releases
    * [UIMA-746] - add additional type checking for featurePath implementation
    * [UIMA-774] - maven build improvements
    * [UIMA-782] - Document Java 1.5 requirement for running Eclipse to use CDE, and mark runtime plugin (and others) as needing 1.5 level
    * [UIMA-792] - CDE's Add "Component Engine Selection" dialog does not remember the setting for "Add selected AEs to end of flow"
    * [UIMA-802] - CDE is unable to create PEAR descriptor as delegate
    * [UIMA-811] - Document import-by-name CDE change
    * [UIMA-816] - maven build - Eclipse plugin build improvements