@@ -266,6 +266,26 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-865'>UIMA-865</a>] -         UIMA core distribution build only works if the UIMA AS plugins are available
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-878'>UIMA-878</a>] -         fix missing license headers
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-879'>UIMA-879</a>] -         Eclipse plugin jar files do not have the right names
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-888'>UIMA-888</a>] -         fix documentation for SOAP deployment
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-889'>UIMA-889</a>] -         fix PearInstaller help file
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-890'>UIMA-890</a>] -         Capabilities with no language spec do not cause proper ResultSpec to be set up
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-891'>UIMA-891</a>] -         uima example annotator does not work with the new Result spec design
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-892'>UIMA-892</a>] -         annoation viewer help dialog mention TAEs
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-893'>UIMA-893</a>] -         annotation viewer throws FileNotFoundException
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-894'>UIMA-894</a>] -         CDE import by name broken on Linux
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-897'>UIMA-897</a>] -         users of uimaj-ep-runtime plugin having trouble due to jar inside jar structure
+</li>
 </ul>
     
 <h2>        Improvement
@@ -350,9 +370,6 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-749'>UIMA-749</a>] -         add performance report to CVD
 </li>
 </ul>
-
-
-
                         
 </body>
 </html>
